BE - Code smells fix to less than 300